--- a/reportReferences.bib
+++ b/reportReferences.bib
@@ -116,3 +116,9 @@
 	year = 2001,
 	url = "http://www.philrees.co.uk/articles/midimode.htm"
 	}
+	
+@ARTICLE{edgeorge,
+	author = "Ed George",
+	title = "CEO. Ed George Designs"
+	year = "2013"
+	}
